# hwp-rs

./: .gitignore  Cargo.toml  README.md
crates/hwp/: Cargo.toml  README.md
crates/hwp/src/: lib.rs
crates/hwp/src/hwp/: bin_data.rs  body.rs  body_text.rs  color_ref.rs  doc_info.rs  header.rs  mod.rs  section.rs  unknown.rs  version.rs
crates/hwp/src/hwp/doc_info/: bin_data.rs  border_fill.rs  bullet.rs  change_tracking.rs  change_tracking_author.rs  char_shape.rs  compatible_document.rs  font.rs  id_mappings.rs  memo_shape.rs  mod.rs  numbering.rs  paragraph_shape.rs  properties.rs  style.rs  tab_definition.rs  track_change.rs
crates/hwp/src/hwp/paragraph/: char.rs  char_list.rs  char_shape.rs  chars.rs  header.rs  line_segment.rs  mod.rs  range_tag.rs
crates/hwp/src/hwp/paragraph/control/: auto_number.rs  book_mark.rs  bookmark.rs  column.rs  common_properties.rs  container.rs  draw_text.rs  element_properties.rs  equation.rs  footnote_endnote.rs  footnote_shape.rs  header_footer.rs  (+18 more)
crates/hwp/src/hwp/parameter_set/: mod.rs
crates/hwp/src/hwp/record/: mod.rs  reader.rs  tags.rs
crates/hwp/src/hwp/utils/: bits.rs  crypto.rs  mod.rs  random.rs
crates/hwp/src/hwpx/: mod.rs
crates/hwp/tests/: hwp_io_test.rs  mod.rs
crates/hwp/tests/files/: hello_world.hwp
crates/hwp/tests/integration/: README.md  mod.rs
crates/hwp/tests/integration/hancom/: README.md  mod.rs
crates/hwp/tests/integration/naver_documents/: README.md  mod.rs
crates/hwp/tests/integration/project/: mod.rs
crates/hwp/tests/unit/: mod.rs  section.rs
crates/hwp/tests/utils/: mod.rs
(+56 files in other folders)
