[package]
name = "hwp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
cfb = "0.7"
hwp_macro = { path = "../macro" }
flate2 = "1.0"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
openssl = "0.10"
