[package]
name = "hwp"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "낮은 수준의 hwp 파서"
repository = "https://github.com/hahnlee/hwp-rs"

[dependencies]
aes = "0.8"
byteorder = "1"
cfb = "0.7"
hwp_macro = { path = "../macro", version = "0.2.0" }
flate2 = "1.0"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
